--- a/styles/main.css
+++ b/styles/main.css
@@ -31,8 +31,7 @@ h3 {
     color: #C4C4C4;
 }
 .wrapper {
-    width: 1600px;
-    margin: 0 auto;
+    width: 100%;
 }
 .wrapper_text {
     width: 1168px;
@@ -43,6 +42,7 @@ h3 {
     display: flex;
     justify-content: space-between;
     background-image: url(../images/header_bg.png);
+    background-size: 100%;
     height: 900px; 
     background-repeat: no-repeat;
 
@@ -131,6 +131,7 @@ h3 {
 }
 .section2 {
     background: url(../images/section2_bg.png);
+    background-size: 100%;
     height: 860px;
 }
 .section2 h2 {
@@ -229,6 +230,7 @@ h3 {
 }
 .section4 {
     background: url(../images/section2_bg.png);
+    background-size: 100%;
 }
 .section4 h2 {
     color: #FFFFFF;
