--- a/styles/main.css
+++ b/styles/main.css
@@ -40,7 +40,7 @@ h3 {
 .header {
     position: relative;
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
     background-image: url(../images/header_bg.png);
     background-size: 100%;
     height: 900px; 
@@ -51,7 +51,8 @@ h3 {
     position: absolute;
     display: flex;
     align-items: center;
-    left: 150px;
+    justify-content: center;
+    left: 250px;
 }
 .nav a{
     margin-right: 20px;
@@ -70,7 +71,7 @@ h3 {
 .header_text {
     position: absolute;
     top: 234px;
-    left: 170px;
+    left: 240px;
     display: flex;
     flex-direction: column;
 }
